# SocketComm

./: ChangeLog  README.md  SocketComm.h
example/: CMakeLists.txt
example/client/: CMakeLists.txt  client.cpp  client.py
example/server/: CMakeLists.txt  server.cpp
